--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "electron-debug": "^3.2.0",
     "electron-util": "^0.12.3",
+    "jquery": "^3.6.0",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
