--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chess",
   "productName": "Chess",
-  "version": "v1.0.2",
+  "version": "v2.1.0",
   "description": "A Simple Chess Engine",
   "main": "main.js",
   "author": "Arighna Chakraborty",
@@ -11,7 +11,7 @@
     "start": "electron .",
     "electron": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder --windows --publish always",
+    "dist": "electron-builder --windows --publish never",
     "release": "np"
   },
   "dependencies": {
